tests/NormalTests/paczka1/small_fuzzy/72661879.err
Error in line 1: 5a8aTvgP9 A231 36,4
Error in line 2: 5a8aTvgP9 S470 6,8
Error in line 4: 5a8aTvgP9 A629 72,7
Error in line 6: A629 S470 2J,0
Error in line 3: A629 S253 34,1
Error in line 5: 5a8aTvgP9 S253 70,8
Error in line 10: 5a8aTvgP9 A629 133,9
Error in line 7: CqEiQvSl S253 36,6
